--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
+body{
+
+}
+.display {
+  display: grid;
+  place-items: center;
+  background: linear-gradient(180deg, rgba(110, 7, 146, 0.9) 0%, rgba(147, 15, 78, 0.9) 159.38%);
+  box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+  transform: rotate(-0.27deg);
+}
+.displayDetails {
+  display: grid;
+  place-items: center;
+
+
+}
+.display h2 {
+  font-size: 2rem;
+  font-weight: 800;
   text-align: center;
+  margin-bottom: 1rem;
+  font-family: "Javanese Text";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 70px;
+  line-height: 159px;
+  color: #FFFFFF;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.display p {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #000;
+  text-align: center;
+  margin-bottom: 1rem;
+  justify-content: center;
+  margin-left: 12px;
+  padding-top: 15px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.display h3 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #000;
+  text-align: center;
+  margin-bottom: 1rem;
+  justify-content: center;
+  margin-left: 16px;
+  padding-top: 12px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.display img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 10px;
+  border-radius: 100%;
+  justify-content: center;
+}
+.display button {
+  background-color: #f182b7;
+  color: #fff;
+  font-size: 1.8rem;
+  font-weight: 600;
+  padding: 0rem 1rem 0.6rem 1rem;
+  border: none;
+  border-radius: 10px;
+  margin-top: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.displayArea {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #f182b7;
+  padding: 40px 0;
+  margin-top: 16px;
+  width: 33.333333%;
+  height: 98px;
 }
 
-.App-link {
-  color: #61dafb;
+.detailsDisplay{
+  align-items: center;
+  justify-content: center;
+  padding: 40px 0;
+  margin-top: 16px;
+  width: 33.333333%;
+  height: 98px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.detailsDisplay h1{
+  font-family: "Javanese Text";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 59px;
+  color: #5c4646;
 }
